test/errors/011_assert_pred.eu
# -*- mode: conf -*-

x: -10 //=? (> 0)
